# emilydotgg-random

./: .gitmodules  Cargo.toml  LICENSE
src/: lib.rs  ui.rs
src/ui/: chart.rs  mod.rs
