[package]
name = "emilydotgg-random"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bincode = "1.3.3"
fpsdk = { path = "fpsdk" }
iced = { path = "iced", features = ["tokio", "image", "pure", "canvas"]  }
iced_native = { path = "iced/native" }
iced_futures = { path = "iced/futures" }
plotters-iced = { git = "https://github.com/Joylei/plotters-iced", features = ["pure", "iced_pure"]}
plotters = { version = "0.3" }
chrono = "0.4"
log = "0.4.14"
parking_lot = "0.11.1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0.2"

[dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[patch.crates-io]
iced = { path = "iced" }
iced_native = { path = "iced/native" }
iced_core = { path = "iced/core" }
iced_style = { path = "iced/style" }
iced_pure = { path = "iced/pure" }
iced_graphics = { path = "iced/graphics" }
